attempt to fix lack of gradient on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,10 +22,10 @@ body {
     width: 100%;
     height: 100%;
     background-color: #EEF6EE;
-    background-image: -moz-linear-gradient(180deg, #00c8ff 10%, #f953c6 100%);
-    background-image: -webkit-linear-gradient(180deg, #00c8ff 10%, #f953c6 100%);
-    background-image: -ms-linear-gradient(180deg, #00c8ff 10%, #f953c6 100%);
-    background-image: linear-gradient(180deg, #00c8ff 10%, #f953c6 100%);
+    background: -moz-linear-gradient(180deg, #00c8ff 10%, #f953c6 100%);
+    background: -webkit-linear-gradient(180deg, #00c8ff 10%, #f953c6 100%);
+    background: -ms-linear-gradient(180deg, #00c8ff 10%, #f953c6 100%);
+    background: linear-gradient(180deg, #00c8ff 10%, #f953c6 100%);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -42,10 +42,10 @@ body:after {
     opacity: 0;
     z-index: 1;
     background-color: #ffffff;
-    background-image: -moz-linear-gradient(60deg, #85C1E9 5%, #2cacd1 37%, #7D3C98 65%, #800080 100%);
-    background-image: -webkit-linear-gradient(60deg, #85C1E9 5%, #2cacd1 37%, #7D3C98 65%, #800080 100%);
-    background-image: -ms-linear-gradient(60deg, #85C1E9 5%, #2cacd1 37%, #7D3C98 65%, #800080 100%);
-    background-image: linear-gradient(60deg, #85C1E9 5%, #2cacd1 37%, #7D3C98 65%, #800080 100%);
+    background: -moz-linear-gradient(60deg, #85C1E9 5%, #2cacd1 37%, #7D3C98 65%, #800080 100%);
+    background: -webkit-linear-gradient(60deg, #85C1E9 5%, #2cacd1 37%, #7D3C98 65%, #800080 100%);
+    background: -ms-linear-gradient(60deg, #85C1E9 5%, #2cacd1 37%, #7D3C98 65%, #800080 100%);
+    background: linear-gradient(60deg, #85C1E9 5%, #2cacd1 37%, #7D3C98 65%, #800080 100%);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
